<resources>
    <string name="alternates_for_dotcom_and_zero">.net .com 0 .org .edu</string>
    <string name="alternates_for_dotcom">.net .com .org .edu</string>
    <string name="alternates_for_cp_12key_sym_punctuation">標點</string>
    <string name="alternates_for_cp_12key_sym_math">數學</string>
    <string name="alternates_for_hwr_multiple_icon">key_icon_all</string>
    <string name="land_defalut_qwerty_types">1</string>
    <string name="keyboard_ime_settings_title">Text input</string>
    <string name="keyboard_ime_settings_summary">Set options for text prediction</string>
    <string name="keyboard_ime_settings_pcqwerty_title">Phone &amp; compact</string>
    <string name="keyboard_ime_settings_pcqwerty_wc_title">Word completion</string>
    <string name="keyboard_ime_settings_pcqwerty_wc_summary">Include long words in suggestions</string>
    <string name="keyboard_ime_settings_fqwerty_title">Standard</string>
    <string name="keyboard_ime_settings_fqwerty_prediction_title">Prediction</string>
    <string name="keyboard_ime_settings_fqwerty_prediction_summary">Enable prediction for standard keyboard</string>
    <string name="keyboard_ime_settings_qwerty_sc_title">Spell correction</string>
    <string name="keyboard_ime_settings_qwerty_sc_summary">Check spelling before suggesting words</string>
    <string name="keyboard_ime_settings_others_title">Other settings</string>
    <string name="keyboard_ime_settings_others_sound_title">Sound feedback</string>
    <string name="keyboard_ime_settings_others_sound_summary">Turn on typing sound</string>
    <string name="keyboard_ime_settings_others_vibration_title">Vibrate when typing</string>
    <string name="keyboard_ime_settings_others_vibration_summary">Vibrate when keys are pressed</string>
    <string name="keyboard_ime_settings_udb_editor_title">Personal dictionary</string>
    <string name="keyboard_ime_settings_udb_editor_title_summary">Edit or sync personal dictionary</string>
    <string name="keyboard_hwkb_settings_title">Hardware keyboard settings</string>
    <string name="keyboard_hwkb_settings_summary">Set options for hardware keyboard</string>
    <string name="keyboard_types_title">Keyboard types</string>
    <string name="keyboard_sipswitch_settings_title">International keyboard</string>
    <string name="keyboard_sipswitch_settings_summary">Select text entry methods to add to switch list</string>
    <string name="keyboard_bilingual_settings_title">Bilingual prediction</string>
    <string name="keyboard_bilingual_2nd_language_dialog_title">Select 2nd language</string>
    <string name="kb_tutorial_title">Tutorial</string>
    <string name="kb_tutorial_summary">Learn about how to enter text</string>
    <string name="trace_keyboard_settings_title">Trace keyboard</string>
    <string name="trace_keyboard_settings_summary">Trace keyboard settings</string>
    <string name="trace_keyboard_settings_trace_prediction_title">Trace keyboard</string>
    <string name="trace_keyboard_settings_trace_prediction_summary">Turn on trace input</string>
    <string name="trace_keyboard_settings_trace_color_title">Trace color</string>
    <string name="trace_keyboard_settings_trace_width_title">Trace width</string>
    <string name="user_dictionary_sync_title">Sync personal dictionary</string>
    <string name="user_dictionary_sync_backup_title">Copy to storage card</string>
    <string name="user_dictionary_sync_backup_title_summary">Back up my dictionary to my SD card</string>
    <string name="user_dictionary_sync_backup_dialog_message">Would you like to copy your personal dictionary to your SD card?</string>
    <string name="user_dictionary_sync_restore_title">Restore from storage card</string>
    <string name="user_dictionary_sync_restore_title_summary">Replace current dictionary with my backup</string>
    <string name="user_dictionary_sync_restore_dialog_message">Would you like to replace your current dictionary with the backup on your SD card?</string>
    <string name="keyboard_ime_settings_title_zh">Chinese text input</string>
    <string name="keyboard_ime_settings_summary_zh">Set options for Chinese</string>
    <string name="keyboard_handwriting_settings_mode_header">Handwriting</string>
    <string name="keyboard_handwriting_settings_mode_title">Chinese mode</string>
    <string name="keyboard_handwriting_settings_writing_stroke_color_title">Pen color</string>
    <string name="keyboard_handwriting_settings_writing_stroke_width_title">Pen width</string>
    <string name="keyboard_handwriting_settings_writing_stroke_speed_title">Waiting time</string>
    <string name="keyboard_zhu_yin_settings_category_title">ZhuYin</string>
    <string name="keyboard_zhu_yin_settings_smart_title">Phrasal input</string>
    <string name="keyboard_zhu_yin_settings_smart_summary">Provide Chinese phrases for ZhuYin</string>
    <string name="keyboard_pin_yin_settings_category_title">PinYin</string>
    <string name="keyboard_pin_yin_mohu_title">Mohu Pinyin Setting</string>
    <string name="keyboard_pin_yin_settings_fuzzy_pairs_category_title">Fuzzy PinYin Pairs</string>
    <string name="keyboard_stroke_settings_category_title">Stroke</string>
    <string name="keyboard_chinese_cmcc_use_qwerty_header">Others</string>
    <string name="keyboard_chinese_cmcc_use_qwerty_summary">URL, password and email address</string>
    <string name="keyboard_chinese_cmcc_use_qwerty_title">Auto switch to standard keypad</string>
    <string name="DAM">DAM</string>
    <string name="DAM_Data">Dam data</string>
    <string name="handwriting_add_pattern_word_mode">handwriting_add_pattern_word_mode</string>
    <string name="keyboard_handwriting_add_pattern_word_mode_title">Personalize pattern</string>
    <string name="keyboard_internal_settings_title">Internal settings</string>
    <string name="keyboard_internal_settings_summary" />
    <string name="keyboard_internal_bias_correction_title">Bias correction</string>
    <string name="keyboard_internal_animation_hint_title">Animation hint</string>
    <string name="keyboard_internal_show_hint_title">Show hint</string>
    <string name="keyboard_internal_touch_movement_title">Touch movement</string>
    <string name="keyboard_internal_post_prediction_title">Post-prediction</string>
    <string name="keyboard_nonword_enable_title">Enable non-word vibration effect</string>
    <string name="keyboard_nonword_times_title">Non-word vibrate times</string>
    <string name="keyboard_nonword_period_title">Non-word vibrate period</string>
    <string name="kb_vibrate_times_title">Vibrate times</string>
    <string name="kb_vibrate_period_title">Vibrate period</string>
    <string name="kb_vibrate_keyup_title">Keyup vibrate</string>
    <string name="kb_vibrate_skip_title">Skip vibration for continuous key press</string>
    <string name="kb_vibrate_skip_threshold_title">Vibrate skip threshold</string>
    <string name="keyboard_ime_settings_pcqwerty">keyboard_ime_settings_pcqwerty</string>
    <string name="keyboard_ime_settings_pcqwerty_sc">keyboard_ime_settings_pcqwerty_sc</string>
    <string name="keyboard_ime_settings_pcqwerty_wc">keyboard_ime_settings_pcqwerty_wc</string>
    <string name="keyboard_ime_settings_fqwerty_prediction">keyboard_ime_settings_fqwerty_prediction</string>
    <string name="keyboard_ime_settings_fqwerty_sc">keyboard_ime_settings_fqwerty_sc</string>
    <string name="keyboard_ime_settings_others_sound">keyboard_ime_settings_others_sound</string>
    <string name="keyboard_ime_settings_others_vibration">keyboard_ime_settings_others_vibration</string>
    <string name="keyboard_ime_settings_udb_editor">keyboard_ime_settings_udb_editor</string>
    <string name="keyboard_types">keyboard_types</string>
    <string name="land_qwerty_types">land_qwerty_types</string>
    <string name="keyboard_bilingual_settings">keyboard_bilingual_settings</string>
    <string name="keyboard_internal_bias_correction">keyboard_internal_bias_correction</string>
    <string name="keyboard_internal_animation_hint">keyboard_internal_animation_hint</string>
    <string name="keyboard_internal_show_hint">keyboard_internal_show_hint</string>
    <string name="keyboard_internal_touch_movement">keyboard_internal_touch_movement</string>
    <string name="keyboard_internal_post_prediction">keyboard_internal_post_prediction</string>
    <string name="keyboard_hwkb_settings">keyboard_hwkb_settings</string>
    <string name="user_dictionary_sync_backup">user_dictionary_sync_backup</string>
    <string name="user_dictionary_sync_restore">user_dictionary_sync_restore</string>
    <string name="cp_keyboard_pinyin_default_lang">keyboard_chinese_pinyin_default_language</string>
    <string name="cp_keyboard_stroke_default_lang">keyboard_chinese_stroke_default_language</string>
    <string name="cp_keyboard_pinyin_mohu_Z_ZH">keyboard_chinese_pinyin_mohu_Z_ZH</string>
    <string name="cp_keyboard_pinyin_mohu_C_CH">keyboard_chinese_pinyin_mohu_C_CH</string>
    <string name="cp_keyboard_pinyin_mohu_S_SH">keyboard_chinese_pinyin_mohu_S_SH</string>
    <string name="cp_keyboard_pinyin_mohu_N_L">keyboard_chinese_pinyin_mohu_N_L</string>
    <string name="cp_keyboard_pinyin_mohu_F_H">keyboard_chinese_pinyin_mohu_F_H</string>
    <string name="cp_keyboard_pinyin_mohu_AN_ANG">keyboard_chinese_pinyin_mohu_AN_ANG</string>
    <string name="cp_keyboard_pinyin_mohu_EN_ENG">keyboard_chinese_pinyin_mohu_EN_ENG</string>
    <string name="cp_keyboard_pinyin_mohu_IN_ING">keyboard_chinese_pinyin_mohu_IN_ING</string>
    <string name="cp_keyboard_pinyin_mohu_Z_title">z = zh</string>
    <string name="cp_keyboard_pinyin_mohu_C_title">c = ch</string>
    <string name="cp_keyboard_pinyin_mohu_S_title">s = sh</string>
    <string name="cp_keyboard_pinyin_mohu_N_title">n = l</string>
    <string name="cp_keyboard_pinyin_mohu_F_title">f = h</string>
    <string name="cp_keyboard_pinyin_mohu_AN_title">an = ang</string>
    <string name="cp_keyboard_pinyin_mohu_EN_title">en = eng</string>
    <string name="cp_keyboard_pinyin_mohu_IN_title">in = ing</string>
    <string name="cp_keyboard_smart_zhuyin">keyboard_smart_zhuyin</string>
    <string name="keyboard_nonword_enable">keyboard_nonword_enable</string>
    <string name="keyboard_nonword_times">keyboard_nonword_times</string>
    <string name="keyboard_nonword_period">keyboard_nonword_period</string>
    <string name="kb_vibrate_times">kb_vibrate_times</string>
    <string name="kb_vibrate_period">kb_vibrate_period</string>
    <string name="kb_vibrate_keyup">kb_vibrate_keyup</string>
    <string name="kb_vibrate_skip">kb_vibrate_skip</string>
    <string name="kb_vibrate_skip_threshold">kb_vibrate_skip_threshold</string>
    <string name="trace_keyboard_settings">trace_keyboard_settings</string>
    <string name="trace_keyboard_settings_trace_prediction">trace_keyboard_settings_trace_prediction</string>
    <string name="trace_keyboard_settings_stroke_color">trace_keyboard_settings_stroke_color</string>
    <string name="trace_keyboard_settings_stroke_width">trace_keyboard_settings_stroke_width</string>
    <string name="trace_keyboard_settings_auto_commit_speed">trace_keyboard_settings_auto_commit_speed</string>
    <string name="handwriting_settings_mode">handwriting_settings_mode</string>
    <string name="handwriting_settings_writing_stroke_color">handwriting_settings_writing_stroke_color</string>
    <string name="handwriting_settings_writing_stroke_width">handwriting_settings_writing_stroke_width</string>
    <string name="handwriting_settings_writing_stroke_speed">handwriting_settings_writing_stroke_speed</string>
    <string name="keyboard_chinese_cmcc_use_qwerty_key">Use Qwerty Key</string>
    <string name="keyboard_chinese_cmcc_use_qwerty_header_key">Others</string>
    <string name="keyboard_handwriting_settings_writing_stroke_width_summary" />
    <string name="keyboard_handwriting_settings_writing_stroke_speed_summary" />
</resources>