<?xml version="1.0" encoding="utf-8"?>
<com.htc.preference.HtcPreferenceScreen android:key="keyboard_settings"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.htc.preference.HtcPreferenceCategory android:title="@string/keyboard_pin_yin_mohu_title" android:selectable="false" />
    <com.htc.preference.HtcCheckBoxPreference android:persistent="true" android:title="@string/cp_keyboard_pinyin_mohu_Z_title" android:key="@string/cp_keyboard_pinyin_mohu_Z_ZH" android:defaultValue="false" />
    <com.htc.preference.HtcCheckBoxPreference android:persistent="true" android:title="@string/cp_keyboard_pinyin_mohu_C_title" android:key="@string/cp_keyboard_pinyin_mohu_C_CH" android:defaultValue="false" />
    <com.htc.preference.HtcCheckBoxPreference android:persistent="true" android:title="@string/cp_keyboard_pinyin_mohu_S_title" android:key="@string/cp_keyboard_pinyin_mohu_S_SH" android:defaultValue="false" />
    <com.htc.preference.HtcCheckBoxPreference android:persistent="true" android:title="@string/cp_keyboard_pinyin_mohu_N_title" android:key="@string/cp_keyboard_pinyin_mohu_N_L" android:defaultValue="false" />
    <com.htc.preference.HtcCheckBoxPreference android:persistent="true" android:title="@string/cp_keyboard_pinyin_mohu_F_title" android:key="@string/cp_keyboard_pinyin_mohu_F_H" android:defaultValue="false" />
    <com.htc.preference.HtcCheckBoxPreference android:persistent="true" android:title="@string/cp_keyboard_pinyin_mohu_AN_title" android:key="@string/cp_keyboard_pinyin_mohu_AN_ANG" android:defaultValue="false" />
    <com.htc.preference.HtcCheckBoxPreference android:persistent="true" android:title="@string/cp_keyboard_pinyin_mohu_EN_title" android:key="@string/cp_keyboard_pinyin_mohu_EN_ENG" android:defaultValue="false" />
    <com.htc.preference.HtcCheckBoxPreference android:persistent="true" android:title="@string/cp_keyboard_pinyin_mohu_IN_title" android:key="@string/cp_keyboard_pinyin_mohu_IN_ING" android:defaultValue="false" />
</com.htc.preference.HtcPreferenceScreen>